LMCI blog update and line spacing issue resolved

--- a/css/blog.css
+++ b/css/blog.css
@@ -67,8 +67,13 @@ body {
   margin: 2rem 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 6rem;
+}
+
 .blog p {
   font-size: 2rem;
+  line-height: 1.25;
 }
 
 .blog h1 {
@@ -95,6 +100,13 @@ body {
   font-size: 2.75rem;
 }
 
+.blog hr {
+  background-color: var(--backgroundColour);
+  height: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+}
+
 .blog pre:has(code) {
   padding: 0.5rem 1rem;
   border-radius: 1rem;
@@ -105,6 +117,7 @@ body {
 :not(pre) > code[class*="language-"] {
   padding: 0 0.5rem;
   background-color: var(--backgroundColour);
+  line-height: 0;
 }
 
 .blog code {
