--- a/css/globals.css
+++ b/css/globals.css
@@ -38,7 +38,7 @@
 }
 
 ::selection {
-  background: black;
+  background: var(--highlightColour1);
 }
 
 * {
